updated media query for 'work' section to avoid overlap

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -92,6 +92,12 @@ a:visited {
 		padding-top: 80px;
 	} */
   }
+
+	@media only screen and (max-width: 770px) {
+		.scroll {
+			padding: 135px 0 0 0;
+		}
+	}
   
   @media only screen and (max-width: 700px) {
 		.caption {
